# TrajToy

./: .gitignore  pyproject.toml  readme.md  t.ipynb
example/: data_tutorial.ipynb  df_tutorial.ipynb  il_df_train_toturial.ipynb  il_mlp_train_toturial.ipynb  il_train_toturial.ipynb  render_toturial.py  rl_train_tutorial.ipynb  road_model_tutorial.ipynb  road_vehicle_env_tutorial.ipynb  vehicle_controller_tutorial.ipynb  vehicle_model_tutorial.ipynb
script/: data_process_run.sh  il_run.sh
src/data_process/: __init__.py  data_process_main.py
src/data_process/conf/: config.yaml
src/data_process/process/: __init__.py  data_analysis.py  data_creator.py  data_preprocess.py
src/il/: __init__.py  eva.py  eval.py  evaluation.py  train.py
src/il/callback/: traj_mlp.py  traj_mlp_callback.py
src/il/conf/: config.yaml  eval_config.yaml  train_config.yaml
src/il/data/: trajectory_data_module.py
src/il/dataset/: __init__.py  trajectory_dataset.py
src/il/eval/: close_eval.py  close_eval_df.py  close_eval_diffusers.py
src/rl/: __init__.py  evaluate.py  train.py
src/sim_env/: __init__.py  exceptions.py  reward_model.py  road_model.py  road_vehicle_env.py  vehicle_controller.py  vehicle_model.py
src/trainflow/: __init__.py  _rank_zero.py  callbacks.py  config.py  data.py  distributed.py  hydra_build.py  loggers.py  metrics.py  model.py  precision.py  seed.py  strategies.py  train.py  trainer.py
tests/: conftest.py  test_data_process.py  test_exceptions.py  test_reward_model.py  test_rl.py  test_road_model.py  test_road_vehicle_env.py  test_vehicle_model.py
(+130 files in other folders)
