[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traj-toy"
version = "0.1.0"
description = "trajectory toy project"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "torch",
    "gymnasium",
    "pygame",
    "casadi",
    "matplotlib",
    "tqdm",
    "tensorboard",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
