[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traj-toy"
version = "0.1.0"
description = "trajectory toy project"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "torch",
    "diffusers>=0.27",
    "accelerate",
    "einops",
    "gymnasium",
    "pygame",
    "imageio>=2.34",
    "imageio-ffmpeg>=0.5",
    "casadi",
    "matplotlib",
    "tqdm",
    "tensorboard",
    "torch-ema",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]